# email-classify

./: .gitignore  Dockerfile  README.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway-frontend.json  railway.json  requirements.txt  run.py  run_frontend.py  run_railway.py  start.bat  start_frontend.sh
app/: __init__.py  config.py  frontend.py  main.py  models.py
app/api/: routes.py
app/nlp/: __init__.py  preprocess.py
app/services/: classifier.py  openai_client.py  response_generator.py
app/tests/: test_api.py  test_nlp.py
