[project]
name = "email-classifier-api"
version = "1.0.0"
description = "API para classificação de emails usando GPT e NLP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # FastAPI e servidor
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    
    # Validação e configuração
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    
    # OpenAI
    "openai>=1.12.0",
    "tenacity>=8.2.3",
    
    # NLP
    "spacy>=3.7.2",
    
    # Utilitários
    "cachetools>=5.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
